--- a/style.css
+++ b/style.css
@@ -1,1 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+#header {
+    background-color: black;
+    color: white;
+    font-family: "Space Mono", monospace;
+}
