--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
-#header {
+#topbar {
     background-color: black;
     color: white;
     font-family: "Space Mono", monospace;
