--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+#body {
+    margin: none;
+}
 #topbar {
     background-color: black;
     color: white;
     font-family: "Space Mono", monospace;
+}
+#topbar-text {
+    margin-bottom: 5px 2px 5px 2px;
 }
