--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
-body {
+head, body {
     margin: none;
     font-family: "Space Mono", monospace;
 }
@@ -17,5 +17,5 @@ body {
     border: 2px black solid;
     margin: 2px;
     border-radius: 3px;
-    height: 20%;
+    height: 500px;
 }
