--- a/style.css
+++ b/style.css
@@ -4,18 +4,14 @@ head, body {
     margin: none;
     font-family: "Space Mono", monospace;
 }
-#topbar {
-    background-color: black;
-    color: white;
+
+#main-box {
+    border: 2px orange solid;
+    border-radius: 5px;
+    text-align: center;
+    position: absolute;
 }
-#topbar-text {
-    margin-bottom: 5px 2px 5px 2px;
-}
-.project {
-    padding: 5px;
-    display: inline-block;
-    border: 2px black solid;
-    margin: 2px;
-    border-radius: 3px;
-    height: 500px;
+
+#jockeywa {
+    border: 2px solid orange;
 }
