--- a/style.css
+++ b/style.css
@@ -1,17 +1,113 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+* {
+    font-family: "Lato", sans-serif;
+}
 
-head, body {
-    margin: none;
-    font-family: "Space Mono", monospace;
+a {
+    text-decoration: none;
+    color: rgb(156, 194, 250);
+    transition: .2s color;
+    transition: .2s text-decoration;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: rgb(133, 173, 233);
+}
+
+body {
+    background-color: rgb(44, 44, 44);
+    color: rgb(233, 233, 233);
 }
 
 #main-box {
-    border: 2px orange solid;
-    border-radius: 5px;
+    border: .25vw rgb(70, 167, 110) solid;
+    border-radius: 1vw;
     text-align: center;
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 65%;
+    height: 65%;
+    box-shadow: 0 0 1vw rgb(70, 167, 110);
+    transition: .5s box-shadow;
+    overflow: hidden;
 }
 
-#jockeywa {
-    border: 2px solid orange;
+#main-box:hover {
+    box-shadow: 0 0 1.5vw rgb(83, 189, 127);
+}
+
+#first {
+    font-size: calc(50px + .15vw);
+    animation: animate 2.5s;
+    top: 2vw;
+    position: relative;
+}
+
+#second {
+    font-size: calc(30px + .05vw);
+    opacity: 0%;
+    animation: animate3 1s;
+    animation-delay: 2.25s;
+    animation-fill-mode: forwards;
+    margin-top: 3vw;
+}
+
+#main-box p {
+    margin-right: 2vw;
+    margin-left: 2vw;
+}
+
+#main-box span {
+    animation: animate2 2.5s;
+    color: rgb(130, 212, 164);
+}
+
+#main-box img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    filter: opacity(60%);
+    width: 100%;
+    z-index: -1;
+}
+
+@keyframes animate {
+    0% {
+        left: -80%;
+    }
+    100% {
+        left: 0%;
+    }
+}
+
+@keyframes animate2 {
+    0% {
+        color: white;
+    }
+    100% {
+        color: rgb(130, 212, 164);
+    }
+}
+
+@keyframes animate3 {
+    0% {
+        opacity: 0%;
+    }
+    100% {
+        opacity: 100%;
+    }
+}
+
+@media (max-width: 1050px) {
+    #main-box img {
+        height: 100%;
+        width: auto;
+    }
+}
+
+#icons {
+    z-index: 2;
 }
