--- a/style.css
+++ b/style.css
@@ -66,11 +66,11 @@ body {
 
 #main-box img {
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 85%;
+    left: 100%;
+    height: auto;
     transform: translate(-50%, -50%);
     filter: opacity(60%);
-    width: 100%;
     z-index: -1;
 }
 
@@ -98,13 +98,6 @@ body {
     }
     100% {
         opacity: 100%;
-    }
-}
-
-@media (max-width: 1050px) {
-    #main-box img {
-        height: 100%;
-        width: auto;
     }
 }
 
