--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 a {
     text-decoration: none;
     color: rgb(156, 194, 250);
-    transition: .2s color;
-    transition: .2s text-decoration;
+    transition: .5s color;
+    transition: .5s text-decoration;
 }
 
 a:hover {
@@ -39,14 +39,14 @@ body {
 }
 
 #first {
-    font-size: calc(50px + .15vw);
-    animation: animate 2.5s;
+    font-size: calc(30px + .65vw);
+    animation: animate 2.25s;
     top: 2vw;
     position: relative;
 }
 
 #second {
-    font-size: calc(30px + .05vw);
+    font-size: calc(20px + .55vw);
     opacity: 0%;
     animation: animate3 1s;
     animation-delay: 2.25s;
@@ -66,12 +66,20 @@ body {
 
 #main-box img {
     position: absolute;
-    top: 85%;
+    top: 82.5%;
     left: 100%;
-    height: auto;
     transform: translate(-50%, -50%);
     filter: opacity(60%);
     z-index: -1;
+}
+
+@media (max-aspect-ratio: 3/4) {
+    #main-box img {
+        top: 50%;
+        left: 50%;
+        object-fit: cover;
+        object-position: center center;
+    }
 }
 
 @keyframes animate {
@@ -101,6 +109,35 @@ body {
     }
 }
 
+@keyframes animate4 {
+    0% {
+        rotate: 0deg;
+    }
+    50% {
+        rotate: 180deg;
+    }
+    100% {
+        rotate: 360deg;
+    }
+}
+
 #icons {
-    z-index: 2;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 2vw;
+    font-size: 1.25vw;
+    animation: animate3 1s;
+    animation-delay: 3.25s;
+}
+
+#icons > i {
+    margin-right: .5vw;
+    margin-left: .5vw;
+    transition: 1.5s color;
+}
+
+#icons > i:hover {
+    color: rgb(83, 189, 127);
+    animation: animate4 1s;
 }
