--- a/style.css
+++ b/style.css
@@ -136,13 +136,13 @@ body {
     color: rgb(233, 233, 233);
 }
 
-#icons > i {
+#icons i {
     margin-right: .5vw;
     margin-left: .5vw;
     transition: 1.5s color;
 }
 
-#icons > i:hover {
+#icons i:hover {
     color: rgb(83, 189, 127);
     animation: animate4 1s;
 }
