--- a/new/style.css
+++ b/new/style.css
@@ -95,7 +95,8 @@ h2 {
 .project {
     width: 20vw;
     display: inline-block;
-    padding: .35vw;
+    padding: .42vw;
+    border-radius: 2.5px;
 }
 
 h3 {
@@ -140,9 +141,9 @@ a {
 
 #icons {
     position: absolute;
-    left: 2vw;
+    right: 2vw;
     bottom: 2vw;
-    font-size: calc(25px + .75vw);
+    font-size: calc(20px + .5vw);
 }
 
 #icons i {
