--- a/new/style.css
+++ b/new/style.css
@@ -151,7 +151,7 @@ a {
     margin-right: .5vw;
     margin-left: .5vw;
     transition: 1.5s color;
-    color: rgb(233, 233, 233);
+    color: white;
 }
 
 #icons i:hover {
@@ -163,6 +163,7 @@ a {
     margin-right: .5vw;
     margin-left: .5vw;
     transition: 1.5s color;
+    color: white;
 }
 
 #icons i:hover {
