--- a/style.css
+++ b/style.css
@@ -1,146 +1,198 @@
+:root {
+    --fire-red: rgb(216, 79, 45);
+    --dark-slate: rgb(44, 45, 46);
+    --snow-blue: rgb(160, 182, 226);
+}
+
 body {
     font-family: "Lato", sans-serif;
-    overflow: hidden; 
+    overflow: hidden;
+    color: white;
+    background-color: var(--dark-slate);
+    margin: 0;
 }
 
 a {
     text-decoration: none;
 }
 
-#second a {
-    color: rgb(156, 194, 250);
-    transition: .5s color;
-    transition: .5s text-decoration;
+.red {
+    color: var(--fire-red);
 }
 
-#second a:hover {
-    text-decoration: underline;
-    color: rgb(133, 173, 233);
+header {
+    padding-left: 2vmax;
+    padding-top: 1.5vmax;
+    padding-bottom: 3.5vmax;
+    padding-right: 2vmax;
+    margin: 0;
+    backdrop-filter: blur(2px);
+    transition: .25s backdrop-filter;
 }
 
-body {
-    background-color: rgb(44, 44, 44);
-    color: rgb(233, 233, 233);
+h1 {
+    margin: 0;
+    font-size: calc(45px + .5vmax);
 }
 
-#main-box {
-    border: .25vw rgb(70, 167, 110) solid;
-    border-radius: 1vw;
+#header-container {
+    background-image: url("images/normandale.png");
+    background-position: 0% 35%;
+    transition: .3s;
+}
+
+#header-container:hover {
+    background-position: 0% 20%;
+    transition: background-position 3s cubic-bezier(.075, .82, .165, 1);
+    transition-delay: .3s;
+}
+
+#header-container:hover:not(:has(*:hover)) header {
+    backdrop-filter: blur(0px);
+    transition-delay: .3s;
+}
+
+#cool-line-thing {
+    height: 2px;
+    display: block;
+    width: 70%;
+    background-color: var(--fire-red);
     text-align: center;
     position: absolute;
-    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    width: 65%;
-    height: 65%;
-    box-shadow: 0 0 1vw rgb(70, 167, 110);
-    transition: .5s box-shadow;
+    transform: translateX(-50%);
+    box-shadow: 0 0 3px 0 var(--fire-red);
+}
+
+#aboutme {
+    margin: 0;
+    margin-left: 2vmax;
+    margin-top: 1.5vmax;
+}
+
+#aboutme > h2 {
+    margin: 0;
+    margin-bottom: .5vmax;
+}
+
+p {
+    margin: 0;
+}
+
+h2 {
+    font-size: calc(23px + .5vmax);
+}
+
+#projects-container {
+    margin-left: 2vmax;
+    margin-top: 1.5vmax;
+}
+
+#projects-container > h2 {
+    margin: 0;
+    margin-bottom: .5vmax;
+}
+
+.project {
+    width: 20vmax;
+    display: block;
+    padding: .65vmax;
+    border-radius: 5px;
     overflow: hidden;
-}
-
-#main-box:hover {
-    box-shadow: 0 0 1.5vw rgb(83, 189, 127);
-}
-
-#first {
-    font-size: calc(50px + .35vw);
-    animation: animate 2.25s;
-    top: 2vw;
+    margin-bottom: .75vmax;
+    background-size: cover;
     position: relative;
 }
 
-#second {
-    font-size: calc(35px + .25vw);
-    opacity: 0%;
-    animation: animate3 1s;
-    animation-delay: 2.25s;
-    animation-fill-mode: forwards;
-    margin-top: 3vw;
+h3 {
+    margin: 0;
+    margin-bottom: .5vmax;
+    font-size: calc(20px + .25vw);
 }
 
-#main-box p {
-    margin-right: 2vw;
-    margin-left: 2vw;
+p {
+    font-size: calc(16px + .125vw);
 }
 
-#main-box span {
-    animation: animate2 2.5s;
-    color: rgb(130, 212, 164);
+#p1 {
+    background-image: url("images/ImpactGREEN.png");
 }
 
-#main-box img {
+#p2 {
+    background-image: url("images/bikeparkmap.png");
+}
+
+#p3 {
+    background-image: url("images/southtown.jpg");
+}
+
+.project a {
+    color: var(--snow-blue);
+}
+
+@keyframes backdrop-change {
+    from { backdrop-filter: brightness(65%) blur(4px); }
+    to { backdrop-filter: brightness(80%) blur(0px); }
+}
+
+@keyframes backdrop-change-reversed {
+    from { backdrop-filter: brightness(65%) blur(0px); }
+    to { backdrop-filter: brightness(70%) blur(4px); }
+}
+
+.project::after {
+    backdrop-filter: brightness(65%) blur(4px);
+    content: "";
+    display: block;
     position: absolute;
-    top: 82.5%;
-    left: 100%;
-    transform: translate(-50%, -50%);
-    filter: opacity(60%);
-    z-index: -1;
+    width: 100%; height: 100%;
+    top: 0;
+    left: 0;
+    animation: backdrop-change-reversed 1s forwards;
 }
 
-@media (max-aspect-ratio: 3/4) {
-    #main-box img {
-        top: 50%;
-        left: 50%;
-        object-fit: cover;
-        object-position: center center;
-    }
+.project:hover::after {
+    animation: backdrop-change 1s forwards;
 }
 
-@keyframes animate {
-    0% {
-        left: -80%;
-    }
-    100% {
-        left: 0%;
-    }
+.project > h3,
+.project > p {
+    z-index: 1;
+    position: relative;
 }
 
-@keyframes animate2 {
-    0% {
-        color: rgb(233, 233, 233);
-    }
-    100% {
-        color: rgb(130, 212, 164);
-    }
-}
-
-@keyframes animate3 {
-    0% {
-        opacity: 0%;
-    }
-    100% {
-        opacity: 100%;
-    }
-}
-
-@keyframes animate4 {
-    0% {
-        rotate: 0deg;
-    }
-    100% {
-        rotate: 360deg;
-    }
+a {
+    text-decoration: none;
 }
 
 #icons {
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 2vw;
-    font-size: calc(25px + 1.25vw);
-    opacity: 0%;
-    animation: animate3 1s forwards;
-    animation-delay: 3.25s;
+    right: 2vmax;
+    bottom: 2vmax;
+    font-size: calc(30px + .25vmax);
 }
 
 #icons i {
-    margin-right: .5vw;
-    margin-left: .5vw;
+    margin-right: .5vmax;
+    margin-left: .5vmax;
     transition: 1.5s color;
-    color: rgb(233, 233, 233);
+    color: white;
+    transition: transform 1s;
 }
 
 #icons i:hover {
-    color: rgb(83, 189, 127);
-    animation: animate4 1s;
+    color: var(--fire-red);
+    transform: rotate(360deg);
+}
+
+.project i {
+    margin-left: .5vmax;
+    transition: 1.5s color;
+    transition: 1s transform;
+    color: white;
+}
+
+.project i:hover {
+    color: var(--fire-red);
+    transform: rotate(360deg);
 }
